use Files.write instead of Files.writeString since it is unavailableat JDK 1.8